# merlin

./: .gitignore  Dockerfile  docker-compose.yml  justfile  main.py  pyproject.toml
config/: assets.yaml  default.yaml  procedures.yaml
docs/architecture/: analytics-engine.md  configuration.md  data-ingestion.md  database.md  event-system.md  project-structure.md  services-deployment.md  task-system.md
docs/maintenance/: coding-conventions.md  testing-strategy.md  tooling.md
merlin/app/analytics/: engine.py  loader.py  models.py  queries.py  runner.py
merlin/app/market/: bootstrap.py
merlin/app/market/db/: migrations.py
merlin/app/market/models/: asset.py  records.py
merlin/app/market/sources/: interface.py  registry.py  schemas.py  yahoo.py
merlin/app/market/tasks/: ingest.py
merlin/core/config/: loader.py  models.py
merlin/core/db/: interface.py  memory.py  migrations.py  timescaledb.py
merlin/core/events/: interface.py  memory.py  models.py  pg.py
merlin/core/sources/: registry.py
merlin/core/tasks/: interface.py  memory.py  models.py  pg_repository.py  reaper.py  scheduler.py  worker.py
merlin/services/: _bootstrap.py  api.py  orchestrator.py  worker.py
tests/: conftest.py  test_smoke.py
tests/app/analytics/: test_engine.py
tests/app/api/: test_health.py
tests/app/market/: test_bootstrap.py
tests/app/market/db/: test_migrations.py
tests/app/market/models/: test_asset.py  test_records.py
tests/core/config/: test_config.py
tests/core/db/: test_database.py  test_migrations.py
tests/core/events/: test_event_log.py
tests/core/sources/: test_registry.py
tests/core/tasks/: conftest.py  test_models.py  test_reaper.py  test_repository.py  test_scheduler.py  test_worker.py
(+4 files in other folders)
