[project]
name = "merlin"
version = "0.1.0"
description = "Market data platform for portfolio construction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "duckdb>=1.2",
    "polars>=1.20",
    "pyarrow>=19.0",
    "yfinance>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pyarrow-stubs>=20.0.0.20251215",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["merlin"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "ANN",  # flake8-annotations
]
ignore = [
    "UP017",  # datetime.UTC alias not recognized by pyright on Python 3.14
]

[tool.ruff.lint.isort]
known-first-party = ["merlin"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (Docker)",
]

[project.scripts]
merlin-worker = "merlin.services.worker:main"
merlin-orchestrator = "merlin.services.orchestrator:main"
merlin-api = "merlin.services.api:main"
